# fish-dating-simulator

./: .gitignore  .gitmodules  Cargo.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
plugins/: coral_seahorse.rhai
src/: achievements.rs  ascii_art.rs  easter_egg.rs  game.rs  main.rs  render.rs  shader.wgsl
src/data/: dialogues.rs  mod.rs  save.rs
src/dating/: fish.rs  mod.rs  scene.rs
src/fishing/: minigame.rs  mod.rs  pond.rs
src/plugins/: dialogue_def.rs  fish_def.rs  loader.rs  mod.rs  registry.rs
src/ui/: menu.rs  mod.rs
